--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "homepage": "https://sabramson16.github.io/quick-notes/",
   "scripts": {
-    "start": "vite",
+    "start": "vite preview --port 3000",
+    "serve": "vite preview --port 5000",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -16,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.3",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^2.1.5",
+    "vite": "^5.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -26,6 +28,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "vite": "^5.3.3"
+    
   }
 }
