--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": false,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://sabramson16.github.io/quick-notes/",
   "scripts": {
     "start": "vite preview --port 3000",
     "serve": "vite preview --port 5000",
@@ -27,7 +26,6 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6",
-    
+    "eslint-plugin-react-refresh": "^0.4.6"
   }
 }
