--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.6"
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "rollup": "^4.18.1"
   },
   "engines": {
     "node": "20.x",
