--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "react-router-dom": "^6.21.3",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
-    "vite": "^5.3.3"
+    "vite": "^5.3.3",
+    "@vitejs/plugin-react": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
